
Change Log
-----------

Version 1.3:

  - PHP-Mesh no longer requires .phpmeshrc to exist in the document root.  It will search the
    current directory, then the parent, all the way up to the document root.  This is done using
    the Apache functions so it will handle aliased directories as well.

  - The example now works so that the user should only have to copy the example into the web
    server and modify its .htaccess file.

Version 1.2.2:

  - BUGFIX: Fixed incorrect name for $property_name which was making the get_property
    function not work as expected (thanks to a couple of my users for spotting that one.)

Version 1.2.1:

  - BUGFIX: Fix problems with detecting absolute paths on Windows by using the new function
    resolve_path, rather than relying on POSIX conventions.

  - Added utils.php, with some common utilities which I'll need to make things more portable.
    Added the unit tests at the same time.

Version v1.2:

  - FEATURE REQUEST: Query strings are now supported with $page->apply_decorator(), so you can
    now decorate pages like "../portlets/somepage.php?value=5".

  - Added the "identity" decorator to work natively.  decorator=identity in the query string
    now causes all buffering to be bypassed.

Version v1.1:

  - FEATURE REQUEST: Made $REQUEST_URI easily available through $page.

Version v1.0:

  - FEATURE REQUEST: Made regular expressions match the upper-case HTML tags of old.
  
  - FEATURE REQUEST: $DOCUMENT_ROOT variable is not present when server globals are disabled,
    so use $_SERVER[] instead.

Version v0.5:

  - Implemented the 'apply_decorator' function on the Page class, which allows decorators to
    be applied to pages on demand.  Currently implemented only from the decorators themselves,
    but it might be advantageous to allow this on pages even though I can't see a use for it
    just yet.

    This provides portal-like functionality, automatically embedding a page which works